--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -169,6 +169,143 @@ jobs:
           # # CONFIG_VMDK_IMAGES is not set
           # EOF
           # 
+          CONFIG_TARGET_ramips=y
+CONFIG_TARGET_ramips_mt76x8=y
+CONFIG_TARGET_ramips_mt76x8_DEVICE_hc5661a=y
+CONFIG_PACKAGE_adblock=y
+CONFIG_PACKAGE_frpc=y
+CONFIG_PACKAGE_kmod-sched-connmark=y
+CONFIG_PACKAGE_luci-app-adblock=y
+CONFIG_PACKAGE_luci-app-advanced-reboot=y
+CONFIG_PACKAGE_luci-app-frpc=y
+CONFIG_PACKAGE_luci-app-privoxy=y
+CONFIG_PACKAGE_luci-app-qos=y
+CONFIG_PACKAGE_luci-app-watchcat=y
+CONFIG_PACKAGE_luci-i18n-adblock-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-advanced-reboot-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-privoxy-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-qos-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-watchcat-zh-cn=y
+CONFIG_PACKAGE_privoxy=y
+CONFIG_PACKAGE_qos-scripts=y
+CONFIG_PACKAGE_watchcat=y
+# CONFIG_ARIA2_EXPAT is not set
+# CONFIG_ARIA2_GNUTLS is not set
+# CONFIG_ARIA2_LIBXML2 is not set
+# CONFIG_ARIA2_NOSSL is not set
+# CONFIG_ARIA2_NOXML is not set
+# CONFIG_ARIA2_OPENSSL is not set
+# CONFIG_B43_FW_4_150 is not set
+# CONFIG_B43_FW_4_178 is not set
+# CONFIG_B43_FW_5_10 is not set
+# CONFIG_B43_FW_5_100_138 is not set
+# CONFIG_B43_FW_6_30 is not set
+# CONFIG_B43_OPENFIRMWARE is not set
+# CONFIG_PACKAGE_B43_BUSES_BCMA is not set
+# CONFIG_PACKAGE_B43_BUSES_BCMA_AND_SSB is not set
+# CONFIG_PACKAGE_B43_BUSES_SSB is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_ArcherC20i is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_ArcherC50v1 is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_ArcherMR200 is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_ai-br100 is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_alfa-network_ac1200rm is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_bdcom_wap2100-sk is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_bocco is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_c108 is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_cf-wr800n is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_cs-qr10 is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_d240 is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_db-wrt01 is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_dch-m225 is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_dir-810l is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_dlink_dwr-116-a1 is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_dlink_dwr-118-a1 is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_dlink_dwr-118-a2 is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_dlink_dwr-921-c1 is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_dlink_dwr-921-c3 is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_dlink_dwr-922-e2 is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_e1700 is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_edimax_br-6478ac-v2 is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_ex2700 is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_ex3700-ex3800 is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_gl-mt300a is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_gl-mt300n is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_gl-mt750 is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_hc5661 is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_hc5761 is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_hc5861 is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_kimax_u35wf is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_kn_rc is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_kn_rf is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_kng_rc is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_lava_lr-25g001 is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_microwrt is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_miwifi-mini is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_mlw221 is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_mlwg2 is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_mt7620a is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_mt7620a_mt7530 is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_mt7620a_mt7610e is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_mt7620a_v22sg is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_mzk-750dhp is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_mzk-ex300np is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_mzk-ex750np is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_na930 is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_oy-0001 is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_phicomm_k2g is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_psg1208 is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_psg1218a is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_psg1218b is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_ravpower_wd03 is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_rp-n53 is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_rt-ac51u is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_rt-ac54u is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_rt-n12p is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_rt-n14u is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_tiny-ac is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_tplink_c2-v1 is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_tplink_c20-v1 is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_u25awf-h1 is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_vonets_var11n-300 is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_we1026-5g-16m is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_whr-1166d is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_whr-300hp2 is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_whr-600d is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_wmr-300 is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_wn3000rpv3 is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_wrh-300cr is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_wrtnode is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_wt3020-4M is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_wt3020-8M is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_xiaomi_miwifi-r3 is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_y1 is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_y1s is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_youku-yk1 is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_zbt-ape522ii is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_zbt-cpe102 is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_zbt-wa05 is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_zbt-we2026 is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_zbt-we826-16M is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_zbt-we826-32M is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_zbt-wr8305rt is not set
+# CONFIG_TARGET_ramips_mt7620_DEVICE_zte-q7 is not set
+# CONFIG_TARGET_ramips_mt7620_Default is not set
+# CONFIG_TARGET_x86_64 is not set
+# CONFIG_TARGET_x86_64_Generic is not set
+# CONFIG_TARGET_x86_generic is not set
+# CONFIG_TARGET_x86_geode is not set
+# CONFIG_TARGET_x86_legacy is not set
+# CONFIG_boost-compile-visibility-global is not set
+# CONFIG_boost-compile-visibility-hidden is not set
+# CONFIG_boost-compile-visibility-protected is not set
+# CONFIG_boost-runtime-shared is not set
+# CONFIG_boost-shared-libs is not set
+# CONFIG_boost-static-and-shared-libs is not set
+# CONFIG_boost-static-libs is not set
+# CONFIG_boost-variant-debug is not set
+# CONFIG_boost-variant-profile is not set
+# CONFIG_boost-variant-release is not set
+
           # ========================固件定制部分结束========================
           # 
           sed -i 's/^[ \t]*//g' ./.config
